--- a/print.html
+++ b/print.html
@@ -166,6 +166,27 @@
 </p>
 </div>
 </div>
+<div class="message is-warning">
+    <div class="message-header">
+      64-bit examples
+    </div>
+<div class="message-body content">
+<p>
+  This book assumes that you are analyzing scenarios in a 64-bit context. If analyzing a scenario in a 32-bit context, then you should read from the 32-bit variants of registers or using 32-bit addresses.
+</p>
+<p>
+  So, if an example use <code>regs.rax</code>, the register should be replaced by <code>regs.eax</code>, like the following example:
+  <br/>
+  <code>
+    ctx.read(regs.rax, U64) # 64-bit
+  </code>
+  <br/>
+  <code>
+    ctx.read(regs.eax, U32) # 32-bit
+  </code>
+</p>
+</div>
+</div>
 </div>
 <h2 id="common-abbreviations-and-variable-names"><a class="header" href="#common-abbreviations-and-variable-names">Common abbreviations and variable names</a></h2>
 <p>REVEN scripts tend to re-use the same abbreviations and variable names for common objects.</p>
