deploy: 0d6c80c0e24281e75a6f30dece33660bc975f3a0

--- a/instruction-semantics.html
+++ b/instruction-semantics.html
@@ -298,7 +298,7 @@ class Disassembler:
 </div>
 </div>
 </div>
-<pre><code class="language-py">dsm = Disassembler
+<pre><code class="language-py">dsm = Disassembler()
 insn = dsm.disassemble(tr)
 # Access the capstone instruction
 insn.capstone_instruction
