deploy: 00f568c3dfea06723dfa33c95d2080affcb18c3b

--- a/memhist.html
+++ b/memhist.html
@@ -187,8 +187,8 @@
 </div>
 </div>
 </div>
-<pre><code class="language-py">for access in server.trace.memory_accesses(from_transition=trace.transition(1000),
-                                    to_transition=trace.transition(1010)):
+<pre><code class="language-py">for access in server.trace.memory_accesses(from_transition=server.trace.transition(1000),
+                                    to_transition=server.trace.transition(1010)):
     print(access)
 </code></pre>
 <p>Sample output:</p>
