--- a/print.html
+++ b/print.html
@@ -513,11 +513,12 @@ def call_bounds(tr: Transition) -&gt; Tuple[Optional[Transition], Optional[Trans
 </div>
 </div>
 <pre><code class="language-py">symbol_name = &quot;CreateProcessW&quot;
+binary_hint = r&quot;kernelbase\.dll&quot;
 try:
     symbol = next(server.ossi.symbols(f&quot;^{symbol_name}$&quot;,
-                                      binary_hint='kernelbase\.dll'))
+                                      binary_hint=binary_hint))
 except StopIteration:
-    raise RuntimeError(f&quot;Could not find symbol '{symbol_name}'&quot;)
+    raise RuntimeError(f&quot;Could not find symbol '{symbol_name}' with binary hint '{binary_hint}'&quot;)
 for ctx in server.trace.search.symbol(symbol):
     print(ctx)
 </code></pre>
@@ -581,7 +582,7 @@ def first_symbol(symbol_name):
 
 
 binary = &quot;c:/windows/system32/ntoskrnl.exe&quot;
-symbols = ['NtCreateFile', 'NtOpenFile', 'NtOpenDirectoryObject']
+symbols = [&quot;NtCreateFile&quot;, &quot;NtOpenFile&quot;, &quot;NtOpenDirectoryObject&quot;]
 
 symbols_name = [(first_symbol(symbol), symbol) for symbol in symbols]
 
@@ -743,8 +744,8 @@ for ctx in server.trace.search.symbol(crash_symbol):
 </div>
 </div>
 </div>
-<pre><code class="language-py">for access in server.trace.memory_accesses(from_transition=trace.transition(1000),
-                                    to_transition=trace.transition(1010)):
+<pre><code class="language-py">for access in server.trace.memory_accesses(from_transition=server.trace.transition(1000),
+                                    to_transition=server.trace.transition(1010)):
     print(access)
 </code></pre>
 <p>Sample output:</p>
@@ -937,7 +938,10 @@ for match_address in ctx.search_in_memory(pattern,
 </div>
 </div>
 <p>If the value you are looking for looks like a string indexed by the strings resource (defaults to strings of printable characters of length 5-128, possibly UTF-16 encoded), then you can use the strings search API, which will be the fastest way:</p>
-<pre><code class="language-py">for string in server.trace.strings(&quot;Network&quot;):
+<pre><code class="language-py">from_tr = server.trace.first_transition
+to_tr = server.trace.last_transition
+
+for string in server.trace.strings(&quot;Network&quot;):
     for access in string.memory_accesses(from_tr, to_tr):
         print(access)
 </code></pre>
@@ -986,7 +990,10 @@ for match_address in ctx.search_in_memory(pattern,
 </div>
 </div>
 </div>
-<pre><code class="language-py">for match in server.trace.search.memory(b&quot;\xc0\xfc\x75\x02&quot;, from_ctx, to_ctx).matches():
+<pre><code class="language-py">from_ctx = server.trace.first_context
+to_ctx = server.trace.last_context
+
+for match in server.trace.search.memory(b&quot;\xc0\xfc\x75\x02&quot;, from_ctx, to_ctx).matches():
     print(match)
 </code></pre>
 <p>Sample output:</p>
